src/shared/styles/layout/app.scss
@use "../configs" as *;

.l-page,
.container {
  width: 100%;
  max-width: 1220px;
  min-height: 100vh;
  min-height: 100dvh;
  margin: 0 auto;
  padding-inline: 12px;
  display: flex;
  flex-direction: column;
}

.l-page__content {
  flex: 1;
  display: flex;
  flex-direction: column;
}

.l-page-section {
  width: 100%;
}

// .l-scroll-panel {
//   min-height: 0;
//   overflow: visible;
// }

.l-center {
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
}

@include respond(sm) {
  .l-page,
  .container {
    padding-inline: 14px;
  }
}

@include respond(md) {
  .l-page,
  .container {
    padding-inline: 16px;
  }

  .l-scroll-panel {
    @include scollbar;
    height: clamp(500px, 74dvh, 590px);
    overflow-x: hidden;
  }
}

@include respond(lg) {
  .l-page,
  .container {
    padding-inline: 10px;
  }

  .l-scroll-panel {
    height: 590px;
  }
}

@media (min-width: 768px) and (max-height: 520px) and (orientation: landscape) {
  .l-scroll-panel {
    height: 78dvh;
  }
}

